<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent"
    tools:context=".forgot.forgot">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:text="@string/hint_recover"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:id="@+id/phoneHolder"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:inputType="phone"
            android:id="@+id/phone"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone_number"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:onClick="handleForgot"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_bg"
        android:layout_height="wrap_content"
        android:text="@string/login_submit"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:id="@+id/forgot_password"
        android:layout_marginTop="15dp"
        android:text="@string/hint_back_login_forgot"/>
</LinearLayout>

</android.support.v4.widget.NestedScrollView>